--- a/index.html
+++ b/index.html
@@ -5,11 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Udacity P3 Portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="js/script.js"></script>
 
 </head>
 <body>
+<div class="header">
+    <div class="icon"><img src=""></div>
+    <div class="introduce">
+        <div class="name">Haku Hal</div>
+        <div class="title">Front-end Ninja</div>
+    </div>
+    <hr>
+</div>
+
+<div class="banner">
+    <div><img src=""></div>
+
+</div>
+
+<div class="works">
+    <div> Featured Works</div>
+    <ul class="work-list">
+       <li><img src=""><div class="work-name">APPLIFY</div><a href=""></a></li>
+       <li><img src=""><div class="work-name">APPLIFY</div><a href=""></a></li>
+       <li><img src=""><div class="work-name">APPLIFY</div><a href=""></a></li>
+    </ul>
+
+</div>
 
 </body>
 </html>
